Fix miss alignment for Our Services Section for bigger screens

--- a/styles.css
+++ b/styles.css
@@ -122,7 +122,7 @@ a
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    align-content: flex-start;
+    align-content: center;
     gap : 30px;
     width: 80%;
 }
@@ -138,5 +138,16 @@ a
 }
 .content-2>p
 {
+    text-align: center;
+}
+.row-1,.row-2
+{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+.row-2 > p
+{
+    width: 190px;
     text-align: center;
 }
